--- a/hackathon.ipynb
+++ b/hackathon.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "41eb6fcf",
+   "id": "d878d0c0",
    "metadata": {},
    "outputs": [
     {
@@ -108,7 +108,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "af7e5d75",
+   "id": "c60e65fa",
    "metadata": {},
    "outputs": [
     {
@@ -184,7 +184,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "0af6dc06",
+   "id": "750e102c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,7 +194,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "9206dfe2",
+   "id": "832fd43c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -205,7 +205,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "8e526587",
+   "id": "62f0d4ac",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -219,7 +219,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "1e223f0d",
+   "id": "875f7d45",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -231,7 +231,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "8e36b06b",
+   "id": "f08a43c3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -243,18 +243,19 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7d63b251",
+   "id": "0350d606",
    "metadata": {},
    "outputs": [],
    "source": [
     "# so we need to extract those three features from a sound file which are mfcc,chroma,mel\n",
-    "def function_extracting_features(file,mfcc,chroma,mel)"
+    "def function_extracting_features(file,mfcc,chroma,mel):\n",
+    "    "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "298ec9aa",
+   "id": "8453351f",
    "metadata": {},
    "outputs": [],
    "source": []
