--- a/hackathon.ipynb
+++ b/hackathon.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "d878d0c0",
+   "id": "b5215d3a",
    "metadata": {},
    "outputs": [
     {
@@ -108,7 +108,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "c60e65fa",
+   "id": "b3672e2d",
    "metadata": {},
    "outputs": [
     {
@@ -184,7 +184,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "750e102c",
+   "id": "dbe99dad",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,7 +194,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "832fd43c",
+   "id": "dd59afd3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -205,7 +205,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "62f0d4ac",
+   "id": "6ff39303",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -219,7 +219,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "875f7d45",
+   "id": "d4f2d950",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -231,7 +231,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "f08a43c3",
+   "id": "a52d3edd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -242,23 +242,81 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "0350d606",
+   "execution_count": 9,
+   "id": "5a052418",
    "metadata": {},
    "outputs": [],
    "source": [
     "# so we need to extract those three features from a sound file which are mfcc,chroma,mel\n",
+    "# first parameter is the sound file name, and the rest three are boolean parameters \n",
     "def function_extracting_features(file,mfcc,chroma,mel):\n",
-    "    "
+    "    file_sound = soundfile.SoundFile(file) \n",
+    "    sample_rate = file_sound.samplerate \n",
+    "    read_sound_file = file_sound.read(dtype = 'float32')\n",
+    "    final = np.array([])\n",
+    "    if chroma:\n",
+    "        # if chroma is true then, we need to get the short time fourier transformation of read_sound_file\n",
+    "        short_tft = np.abs(librosa.stft(read_sound_file))\n",
+    "    if mfcc:\n",
+    "        # if mfcc is true then call the librosa.feature.mfcc and get mean value of it\n",
+    "        mfccs = np.mean(librosa.feature.mfcc(y=read_sound_file, sr=sample_rate, n_mfcc=40).T, axis=0)\n",
+    "        final = np.hstack((final, mfcss))\n",
+    "    if chroma:\n",
+    "        chroma = np.mean(librosa.feature.chroma_stft(S=short_tft, sr=sample_rate).T, axis=0)\n",
+    "        final = np.hstack((final,chroma))\n",
+    "        \n",
+    "    if mel:\n",
+    "        mel_new = np.mean(librosa.feature.melspecrogram(read_sound_file, sr=sample_rate).T, axis=0)\n",
+    "        final = np.hstack((final, mel_new))\n",
+    "        \n",
+    "    return final\n",
+    "        \n",
+    "    \n",
+    "        \n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "72c3711b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# now we will create a dictionary to hold numbers and emotions that are present in ravdess dataset\n",
+    "\n",
+    "feelings = {\n",
+    "    '01':'neutral',\n",
+    "    '02':'calm',\n",
+    "    '03':'happy',\n",
+    "    '04':'sad',\n",
+    "    '05':'angry',\n",
+    "    '06':'fearful',\n",
+    "    '07':'disgust',\n",
+    "    '08':'surprised'\n",
+    "}\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8453351f",
+   "id": "02f65d58",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# now we should load the ravdess data and the number in the feelings dictionary and the data files \n",
+    "# contain the number with dashed in between eg: 01-02-01-07.wvl\n",
+    "import os,glob,pickle\n",
+    "def load_data_from_dataset(test_size=0.2):\n",
+    "    X=[]\n",
+    "    Y=[]\n",
+    "    for sound_file in glob.glob(\"E:\\\\vjhackaton\\\\VJH_012\\\\dataset\\\\Actor_*\\\\*.wav\"):\n",
+    "        sound_file_name = os.path.basename(sound_file)\n",
+    "        feeling = feelings[sound_file_name.split(\"-\")[2]]\n",
+    "        \n",
+    "        \n",
+    "        "
+   ]
   }
  ],
  "metadata": {
