--- a/model1.ipynb
+++ b/model1.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "5a8c2f8e",
+   "id": "08b37fd0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "6585d1b9",
+   "id": "9b35d783",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "5f0ed83b",
+   "id": "98d4fee8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +63,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "8f7b2e95",
+   "id": "f8da61aa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,13 +80,13 @@
     "}\n",
     "\n",
     "# these are the emotions which is used to detect stress\n",
-    "observed_feelings=['sad', 'angry', 'fearful']"
+    "observed_feelings=['happy','neutral','sad', 'angry', 'fearful']"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "ad1d4832",
+   "id": "82ea8366",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,13 +103,14 @@
     "        feature=features_extraction_from_soundfile(file, mfcc=True, chroma=True, mel=True)\n",
     "        x.append(feature)\n",
     "        y.append(feeling)\n",
+    "    \n",
     "    return train_test_split(np.array(x), y, test_size=test_size, random_state=9)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "b9f227fa",
+   "id": "6b16bcbb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,14 +121,14 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "025ce435",
+   "id": "7aca8bea",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(432, 144)\n"
+      "(621, 207)\n"
      ]
     }
    ],
@@ -139,7 +140,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "78e3fc44",
+   "id": "65098457",
    "metadata": {},
    "outputs": [
     {
@@ -178,8 +179,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "e1409cc6",
+   "execution_count": 9,
+   "id": "9771a15e",
    "metadata": {},
    "outputs": [
     {
@@ -206,8 +207,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "d047982d",
+   "execution_count": 10,
+   "id": "0597fc55",
    "metadata": {},
    "outputs": [
     {
@@ -225,8 +226,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "90c4e8cf",
+   "execution_count": 11,
+   "id": "d9188f82",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -237,18 +238,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "4e92f741",
+   "execution_count": 12,
+   "id": "b86253c0",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\users\\fujitsu\\appdata\\local\\programs\\python\\python38\\lib\\site-packages\\sklearn\\neural_network\\_multilayer_perceptron.py:614: ConvergenceWarning: Stochastic Optimizer: Maximum iterations (500) reached and the optimization hasn't converged yet.\n",
-      "  warnings.warn(\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
@@ -256,7 +249,7 @@
        "              learning_rate='adaptive', max_iter=500)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -268,8 +261,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "9a2c91f7",
+   "execution_count": 13,
+   "id": "220515ae",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -279,15 +272,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "2e63500e",
+   "execution_count": 14,
+   "id": "d870437e",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy score: 77.08%\n"
+      "Accuracy score: 60.39%\n"
      ]
     }
    ],
@@ -299,8 +292,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "2d6f3534",
+   "execution_count": 15,
+   "id": "b7f33f13",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -309,23 +302,22 @@
     "with open('model_pickle','rb') as file:\n",
     "    mp = pickle.load(file)\n",
     "    \n",
-    "\n",
     "# mp.predict([[5000]])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "id": "be1016f4",
+   "execution_count": 16,
+   "id": "7606bf99",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array(['fearful'], dtype='<U7')"
+       "array(['angry'], dtype='<U7')"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -337,8 +329,31 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 20,
+   "id": "d40687b8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['happy'], dtype='<U7')"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x = \"E:\\\\vjhackaton\\\\VJH_012\\\\dataset\\\\testing\\\\03-01-03-02-01-01-24.wav\"\n",
+    "x_testing2 = features_extraction_from_soundfile(x,mfcc=True,chroma=True,mel=True)\n",
+    "mp.predict([x_testing2])"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "66815734",
+   "id": "9eade92a",
    "metadata": {},
    "outputs": [],
    "source": []
