--- a/model1.ipynb
+++ b/model1.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "08b37fd0",
+   "id": "4676aebf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "9b35d783",
+   "id": "da0dd09a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "98d4fee8",
+   "id": "4b310378",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +63,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "f8da61aa",
+   "id": "600853a3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +86,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "82ea8366",
+   "id": "2d7b0b84",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,7 +110,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "6b16bcbb",
+   "id": "e968f755",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,7 +121,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "7aca8bea",
+   "id": "30a4457c",
    "metadata": {},
    "outputs": [
     {
@@ -140,7 +140,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "65098457",
+   "id": "f41ae17c",
    "metadata": {},
    "outputs": [
     {
@@ -180,7 +180,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "9771a15e",
+   "id": "0b2c24c8",
    "metadata": {},
    "outputs": [
     {
@@ -208,7 +208,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "0597fc55",
+   "id": "ea30d915",
    "metadata": {},
    "outputs": [
     {
@@ -227,7 +227,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "d9188f82",
+   "id": "c7152070",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -239,7 +239,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "b86253c0",
+   "id": "51fd7fd7",
    "metadata": {},
    "outputs": [
     {
@@ -262,7 +262,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "220515ae",
+   "id": "347d7594",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -273,14 +273,14 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "d870437e",
+   "id": "cec1d3fc",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy score: 60.39%\n"
+      "Accuracy score: 62.80%\n"
      ]
     }
    ],
@@ -293,7 +293,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "b7f33f13",
+   "id": "3bade331",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -308,7 +308,19 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "7606bf99",
+   "id": "87c01c19",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import joblib\n",
+    "joblib.dump(model, 'model')\n",
+    "mj = joblib.load('model')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "f8496430",
    "metadata": {},
    "outputs": [
     {
@@ -317,7 +329,7 @@
        "array(['angry'], dtype='<U7')"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -329,8 +341,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "id": "d40687b8",
+   "execution_count": 18,
+   "id": "e7607269",
    "metadata": {},
    "outputs": [
     {
@@ -339,7 +351,7 @@
        "array(['happy'], dtype='<U7')"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -352,8 +364,132 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 20,
+   "id": "d564ff0a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[-4.83325623e+02  4.22921944e+01 -7.69092417e+00  1.68036346e+01\n",
+      "  3.23886776e+00 -4.13074398e+00 -1.93029058e+00 -4.23250818e+00\n",
+      " -1.96569884e+00  2.02020526e+00  1.60848665e+00  1.97999179e+00\n",
+      "  4.36226372e-03  3.62556338e+00 -2.93347192e+00 -2.59113002e+00\n",
+      "  1.46224344e+00  2.95814890e-02 -2.63227129e+00 -4.94483203e-01\n",
+      " -2.67357969e+00 -1.23616004e+00 -8.19524109e-01  1.19425133e-01\n",
+      " -1.63785052e+00 -7.45011330e-01 -6.29319966e-01  3.81209087e+00\n",
+      "  2.98446488e+00  5.20075321e+00  3.65318966e+00  4.90893364e+00\n",
+      "  3.04706669e+00  3.65389800e+00  3.05631781e+00  2.69851327e+00\n",
+      "  9.61750329e-01  2.79772043e+00  2.80649996e+00  3.17152929e+00\n",
+      "  6.27624393e-01  7.25388765e-01  7.01661646e-01  7.47256994e-01\n",
+      "  7.66767681e-01  7.66769111e-01  7.37534940e-01  7.65109420e-01\n",
+      "  7.69162774e-01  7.76875675e-01  7.64928639e-01  6.79624856e-01\n",
+      "  1.87766291e-02  2.59803375e-03  1.22612529e-03  5.34553407e-03\n",
+      "  2.23920103e-02  2.73481101e-01  1.25228858e+00  1.21362686e+00\n",
+      "  1.59841204e+00  3.87070030e-01  2.77286917e-02  3.41020487e-02\n",
+      "  1.07712828e-01  1.55190542e-01  3.41014326e-01  4.09379810e-01\n",
+      "  8.29149604e-01  1.81936216e+00  9.00841415e-01  5.85596085e-01\n",
+      "  5.06063998e-01  1.49069726e-01  3.24709773e-01  5.01575232e-01\n",
+      "  3.95391345e-01  6.26659274e-01  1.00054121e+00  1.10661495e+00\n",
+      "  8.15387845e-01  2.21531406e-01  2.94978082e-01  6.05206549e-01\n",
+      "  4.55653965e-01  1.35070726e-01  1.44587278e-01  1.36372149e-01\n",
+      "  6.93544149e-02  5.12178764e-02  2.71894205e-02  2.43422091e-02\n",
+      "  2.62668245e-02  3.97125259e-02  3.01990546e-02  5.16736545e-02\n",
+      "  1.42216653e-01  2.11163491e-01  5.78160465e-01  5.00024796e-01\n",
+      "  6.63824379e-02  5.31630106e-02  8.58226418e-02  4.91063148e-02\n",
+      "  7.53686875e-02  5.79096079e-02  1.45960182e-01  2.26410925e-01\n",
+      "  1.03113070e-01  1.06975794e-01  1.00572266e-01  7.77826235e-02\n",
+      "  1.11124240e-01  1.45787179e-01  8.40941966e-02  6.60686195e-02\n",
+      "  4.14546728e-02  3.34732197e-02  1.02619015e-01  6.70071468e-02\n",
+      "  4.30767760e-02  3.39145139e-02  3.98146212e-02  4.97728102e-02\n",
+      "  2.53197122e-02  1.77910123e-02  5.06504215e-02  1.02506101e-01\n",
+      "  5.20064272e-02  6.45167306e-02  1.04298353e-01  7.51813501e-02\n",
+      "  1.00343138e-01  1.39275223e-01  7.97751546e-02  7.24908039e-02\n",
+      "  4.64940816e-02  2.09273249e-02  2.22263727e-02  1.28590381e-02\n",
+      "  9.73646156e-03  1.66126154e-02  1.01001961e-02  1.19094616e-02\n",
+      "  2.70654820e-02  1.90588273e-02  9.51384660e-03  1.85948517e-02\n",
+      "  1.33048790e-02  8.40882305e-03  6.00225292e-03  6.00999920e-03\n",
+      "  2.92949472e-03  1.74905767e-03  2.00396683e-03  2.83209328e-03\n",
+      "  4.60809655e-03  5.07991156e-03  3.59394355e-03  3.89971584e-03\n",
+      "  4.10757586e-03  3.40592908e-03  4.34037065e-03  4.73137945e-03\n",
+      "  3.84617457e-03  2.86002178e-03  2.75042118e-03  3.16525809e-03\n",
+      "  2.76865647e-03  2.73780641e-03  1.56569539e-03  8.19057284e-04\n",
+      "  1.22317020e-03  1.29293080e-03  1.52919325e-03  1.52244954e-03\n",
+      "  1.37784984e-03  8.40320252e-04  7.11686502e-04  2.79870117e-04] angry\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(x_train[1],y_train[1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "d6209eb7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[-5.15854431e+02  2.35887413e+01 -2.07358341e+01  5.94987631e+00\n",
+      " -2.03964787e+01 -9.24988651e+00 -1.17979631e+01 -8.41280460e+00\n",
+      " -3.36521506e+00 -8.76996517e+00  2.50473070e+00 -7.99495649e+00\n",
+      " -5.78071237e-01 -1.60435224e+00 -8.50483799e+00  2.72751957e-01\n",
+      " -6.23784256e+00  5.92952967e-01 -3.87271613e-01  8.75582695e-01\n",
+      "  3.66258907e+00  4.95695353e+00  4.62903357e+00  2.23004866e+00\n",
+      "  3.34340185e-01  3.98490858e+00  3.71867299e+00  9.91162300e+00\n",
+      "  5.24005985e+00  2.14117837e+00 -1.48463714e+00  1.98442745e+00\n",
+      "  4.45191056e-01  2.16963924e-02 -3.55134892e+00 -7.90532529e-01\n",
+      " -2.40508825e-01  5.80796003e-01 -1.63725758e+00 -2.61674333e+00\n",
+      "  5.60326815e-01  6.21002376e-01  5.91118693e-01  5.50850213e-01\n",
+      "  5.32920778e-01  6.03641629e-01  5.54554403e-01  5.30105591e-01\n",
+      "  6.08929098e-01  6.09773278e-01  6.18602693e-01  5.78081071e-01\n",
+      "  4.88010672e-04  1.75929585e-04  1.09068686e-04  6.82257669e-05\n",
+      "  5.15780084e-05  7.80867122e-05  8.07426695e-05  2.70327902e-03\n",
+      "  4.65488657e-02  1.12585038e-01  1.29855126e-01  2.62015104e-01\n",
+      "  2.43856981e-01  1.22688413e-01  3.55836749e-01  5.47752045e-02\n",
+      "  8.72616004e-03  1.59597266e-02  5.41432872e-02  1.55179828e-01\n",
+      "  5.99922501e-02  4.22305651e-02  2.08995089e-01  2.63103724e-01\n",
+      "  1.95495263e-01  2.83050478e-01  2.01442212e-01  9.83042419e-02\n",
+      "  4.28814173e-01  5.32215059e-01  1.21150210e-01  2.20084079e-02\n",
+      "  8.39925930e-03  1.95214793e-01  3.33541393e-01  1.66719183e-01\n",
+      "  1.26569733e-01  4.58636433e-02  8.81341174e-02  2.56259024e-01\n",
+      "  6.51614010e-01  1.39154017e-01  3.46804783e-03  8.51664040e-03\n",
+      "  1.01875365e-01  2.67269850e-01  1.82980582e-01  2.87137836e-01\n",
+      "  2.09323302e-01  1.26252621e-01  1.55232875e-02  3.42844939e-03\n",
+      "  4.20070253e-03  1.02615319e-02  3.31386738e-02  5.67626506e-02\n",
+      "  2.06475332e-01  1.52127877e-01  1.81441065e-02  1.18133156e-02\n",
+      "  1.60635728e-02  9.84645076e-03  1.53415337e-01  1.44781724e-01\n",
+      "  4.41415124e-02  2.21745744e-02  1.74461026e-02  3.46436612e-02\n",
+      "  5.57998642e-02  3.21940370e-02  1.28998393e-02  6.41012518e-03\n",
+      "  1.21721737e-02  3.61876674e-02  4.07265499e-02  9.18841176e-03\n",
+      "  6.84710033e-03  9.53841954e-03  1.10223861e-02  8.49848799e-03\n",
+      "  7.85560347e-03  1.77439284e-02  1.69916991e-02  2.83991802e-03\n",
+      "  7.27099087e-03  1.91429947e-02  1.03859659e-02  3.65003478e-03\n",
+      "  5.50695835e-03  5.87680237e-03  3.41502135e-03  4.52407822e-03\n",
+      "  2.24884809e-03  2.24260031e-03  3.93433822e-03  2.79111345e-03\n",
+      "  3.90786910e-03  8.92826077e-03  4.33689356e-03  1.18549569e-02\n",
+      "  1.63859632e-02  8.51593167e-03  1.62372999e-02  1.01873446e-02\n",
+      "  6.92138122e-03  3.90451774e-03  1.86520664e-03  8.37993983e-04\n",
+      "  6.94405753e-04  4.83266049e-04  7.92430423e-04  4.87047539e-04\n",
+      "  3.50989227e-04  3.87952197e-04  4.05658386e-04  3.62415536e-04\n",
+      "  3.19693034e-04  2.14265005e-04  1.66130150e-04  2.31380676e-04\n",
+      "  2.48721539e-04  3.88674409e-04  3.65404441e-04  3.03093839e-04\n",
+      "  3.13734228e-04  2.33605853e-04  1.17019947e-04  5.90560048e-05]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(x_testing2)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "9eade92a",
+   "id": "0b8edf33",
    "metadata": {},
    "outputs": [],
    "source": []
